force-app/main/default/objects/Multi_Location_Contract__c/Multi_Location_Contract__c.object-meta.xml
<CustomObject>
    <description>This object is a junction between Contract and Account, enabling a Contract to be linked to multiple practices.</description>
    <label>Multi Location Contract</label>
    <nameField>
        <displayFormat>MLC-{00000}</displayFormat>
        <label>Multi Location Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multi Location Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>