force-app/main/default/objects/Multi_Location_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>References the actual Contract to which one or more Practices are related to.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Multi Location Contracts</relationshipLabel>
    <relationshipName>Multi_Location_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>