force-app/main/default/objects/Multi_Location_Contract__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <description>Contract End Date of the related Contract.</description>
    <formula>Contract__r.EndDate</formula>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>