force-app/main/default/objects/Multi_Location_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Contract Status of the related Contract.</description>
    <formula>TEXT(Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>