force-app/main/default/objects/Multi_Location_Contract__c/fields/First_Location__c.field-meta.xml
<CustomField>
    <fullName>First_Location__c</fullName>
    <description>Name and Billing Address of the Practice to which the Contract is directly related.</description>
    <formula>Contract__r.Account.FirstName&amp;&quot; &quot;&amp;Contract__r.Account.MiddleName&amp;&quot; &quot;&amp; Contract__r.Account.LastName&amp;BR()&amp;
IF(ISBLANK(Contract__r.Account.BillingStreet), &quot;&quot;, Contract__r.Account.BillingStreet &amp;BR())&amp;
IF(ISBLANK(Contract__r.Account.BillingCity), &quot;&quot;, Contract__r.Account.BillingCity &amp; &quot;, &quot;) &amp;
Contract__r.Account.BillingState &amp; &quot; &quot; &amp;
Contract__r.Account.BillingPostalCode &amp; BR() &amp;
Contract__r.Account.BillingCountry</formula>
    <label>First Location</label>
    <type>Text</type>
</CustomField>