force-app/main/default/objects/Multi_Location_Contract__c/fields/Related_Location__c.field-meta.xml
<CustomField>
    <fullName>Related_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the Practice associated with the primary Contract.</description>
    <label>Related Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Multi Location Contracts</relationshipLabel>
    <relationshipName>Multi_Location_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>